# mango

./: .ct-comparison-ignore  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  ROADMAP.md  SECURITY.md  clippy.toml  deny.toml  rustfmt.toml  unsafe-baseline.json
.cargo/: config.toml
.config/: nextest.toml
.github/: dependabot.yml  pull_request_template.md
.github/schemas/: README.md
.github/workflows/: audit.yml  ci.yml  ct-comparison.yml  dependabot-selftest.yml  differential-milestone.yml  differential-nightly.yml  geiger.yml  loom.yml  madsim.yml  miri.yml  non-exhaustive.yml  public-api.yml  sbom.yml  semver-checks.yml  vet.yml
.planning/: 0-1-ci-bootstrap.plan.md  0-10-bench-oracle-harness.plan.md  0-11-monotonic-clock-policy.plan.md  0-12-crash-only-declaration.plan.md  0-13-mango-proto-skeleton.plan.md  0-14-contributing-md.plan.md  0-15-pr-template.plan.md  0-2-rustfmt-editorconfig.plan.md  0-3-lint-hardening.plan.md  0-4-arithmetic-policy.plan.md  0-5-concurrency-primitive-ban.plan.md  0-6-release-overflow-checks.plan.md  0-7-cargo-deny.plan.md  0-8-cargo-audit.plan.md  0-9-cargo-msrv.plan.md  1-storage-adr-0002.plan.md  backend-raftlogstore-traits.plan.md  btreemap-proptest-oracle.plan.md  cargo-geiger-storage-baseline.plan.md  ci-hotfix-msrv-time.plan.md  differential-backend-vs-bbolt.plan.md  fork-raft-engine-lz4-verification.md  mango-storage-skeleton.plan.md  msrv-wit-bindgen-fix.plan.md
.planning/adr/: 0001-bench-oracle-harness.md  0002-storage-engine.md  0002-storage-engine.verification.md  0003-msrv-bump.md
benches/: README.md
benches/oracles/bbolt/: .gitignore  BBOLT_QUIRKS.md  README.md  VERSIONS  bench.go  bench_test.go  build.sh  go.mod  go.sum  main.go  main_test.go  verify_harness_catches.sh
benches/oracles/etcd/: .gitignore  README.md  VERSIONS  fetch.sh
benches/results/phase-1/: README.md
benches/runner/: HARDWARE.md  hardware-signature.sh  hwsig-lib.sh  run.sh
benches/storage/: Cargo.toml  README.md
benches/storage/src/: bbolt_runner.rs  dropcache.rs  gate.rs  lib.rs  mango_runner.rs  measure.rs  stats.rs  workload.rs  zipfian.rs
benches/workloads/: storage.toml
crates/mango/: Cargo.toml
crates/mango-loom-demo/: Cargo.toml
crates/mango-loom-demo/src/: lib.rs
crates/mango-loom-demo/tests/: loom_spinlock.rs
crates/mango-madsim-demo/: Cargo.toml
crates/mango-madsim-demo/src/: lib.rs
crates/mango-madsim-demo/tests/: madsim_demo.rs  tokio_demo.rs
crates/mango-mvcc/: Cargo.toml
crates/mango-mvcc/src/: bucket.rs  encoding.rs  error.rs  key_history.rs  lib.rs  revision.rs  sharded_key_index.rs  watchable_store.rs
crates/mango-mvcc/src/store/: lease.rs  mod.rs  range.rs  snapshot.rs  txn.rs  writer.rs
crates/mango-mvcc/tests/: loom_sharded_index.rs  model_proptest.rs  redb_kv_smoke.rs  security_keyindex_dos.rs  snapshot_consistency.rs  watch_basic.rs  watch_catchup.rs
crates/mango-proto/: Cargo.toml  build.rs
crates/mango-proto/proto/: hello.proto
crates/mango-proto/src/: lib.rs
crates/mango-storage/: Cargo.toml
crates/mango-storage/src/: backend.rs  lib.rs
crates/mango-storage/src/inmem/: batch.rs  mod.rs  snapshot.rs
crates/mango-storage/src/raft_engine/: config.rs  convert.rs  mod.rs
crates/mango-storage/src/redb/: batch.rs  mod.rs  registry.rs  snapshot.rs  value_compression.rs
crates/mango-storage/tests/: btreemap_oracle.rs  crash_recovery_eio.rs  crash_recovery_panic.rs  differential_vs_bbolt.rs  disk_full.rs  engine_swap_dryrun.rs  madsim_smoke.rs  raft_engine_crash_recovery.rs  raft_engine_logstore.rs  raft_engine_madsim_smoke.rs  recovery_time.rs  redb_backend.rs  redb_compression.rs
crates/mango-storage/tests/differential_vs_bbolt/seeds/: README.md
crates/mango-storage/tests/fixtures/: eio_inject.c
crates/mango/src/: lib.rs
crates/xtask-vet-ttl/: Cargo.toml
crates/xtask-vet-ttl/src/: lib.rs  main.rs
docs/: api-stability.md  arithmetic-policy.md  ct-comparison-policy.md  dependency-updates.md  documentation-policy.md  index.html  loom.md  madsim.md  miri.md  msrv.md  public-api-policy.md  sbom-policy.md  semver-policy.md  supply-chain-policy.md  testing.md  time.md  unsafe-policy.md
docs/architecture/: crash-only.md
fuzz/: Cargo.toml  seed_corpus.sh
fuzz/fuzz_targets/: decode_arbitrary.rs  round_trip.rs
scripts/: ct-comparison-check.sh  ct-comparison-scripts-test.sh  dependabot-scripts-test.sh  geiger-check.sh  geiger-gen-fixtures.sh  geiger-scripts-test.sh  geiger-update-baseline.sh  madsim-crates.sh  madsim-scripts-test.sh  miri-changed-crates.sh  miri-crates.sh  miri-scripts-test.sh  non-exhaustive-check.sh  non-exhaustive-scripts-test.sh  parse-recovery-time.sh  public-api-scripts-test.sh  sbom-check.sh  sbom-gen-fixtures.sh  sbom-scripts-test.sh  semver-scripts-test.sh  test-bench-oracle-fetch.sh  test-bench-run-wrapper.sh  test-hardware-signature.sh  test-msrv-pin.sh  test-watchdog.sh  verify-contributing-refs.sh  vet-scripts-test.sh  vet-update.sh
supply-chain/: config.toml
tests/fixtures/geiger/: baseline-4-2.json  baseline-5-2.json  baseline-wrong-version.json  equal.json  grown-exprs-6.json  grown-exprs.json  non-workspace-growth.json  shrunk-exprs.json  storage-baseline-missing-redb.json  (+11 more)
tests/fixtures/geiger-toy-workspace/: Cargo.toml  expected-baseline.json
tests/fixtures/geiger-toy-workspace/toy-clean/: Cargo.toml
tests/fixtures/geiger-toy-workspace/toy-clean/src/: lib.rs
tests/fixtures/geiger-toy-workspace/toy-unsafe/: Cargo.toml
tests/fixtures/geiger-toy-workspace/toy-unsafe/src/: lib.rs
tests/fixtures/non-exhaustive/: Cargo.toml
tests/fixtures/non-exhaustive/allowed/: Cargo.toml
tests/fixtures/non-exhaustive/allowed-derive-after/: Cargo.toml
tests/fixtures/non-exhaustive/allowed-derive-after/src/: lib.rs
tests/fixtures/non-exhaustive/allowed/src/: lib.rs
tests/fixtures/non-exhaustive/bad/: Cargo.toml
tests/fixtures/non-exhaustive/bad/src/: lib.rs
tests/fixtures/non-exhaustive/compliant/: Cargo.toml
tests/fixtures/non-exhaustive/compliant/src/: lib.rs
(+6 files in other folders)
