[workspace]
resolver = "2"
members = [
    "crates/mango",
    "crates/mango-proto",
    "crates/mango-loom-demo",
    "crates/mango-madsim-demo",
    "crates/xtask-vet-ttl",
]
# tests/fixtures/geiger-toy-workspace is a self-contained workspace
# used by scripts/geiger-scripts-test.sh as a real-cargo-geiger
# oracle. Excluding it keeps Cargo from discovering its
# deliberately-unsafe source under mango's `unsafe_code = "forbid"`
# lint and from walking its `[workspace]` table as if it were a
# nested member. See docs/unsafe-policy.md.
exclude = ["tests/fixtures/geiger-toy-workspace"]

# Miri curated-subset opt-in (see docs/miri.md). Any crate that ships
# `unsafe` (and therefore carries a `#![allow(unsafe_code)]` escape
# from the workspace `unsafe_code = "forbid"` lint) MUST name itself
# here in the same PR. `.github/workflows/miri.yml` reads this list
# via `scripts/miri-crates.sh`. The workspace metadata table is
# Cargo's documented escape hatch for project-local extensions; Cargo
# does not validate the contents (typos land silently), so
# `scripts/miri-scripts-test.sh` is the regression test for the
# table shape.
#
# A follow-up dylint (tracked in GitHub issues) will reject any crate
# with `#![allow(unsafe_code)]` that is missing from this list.
[workspace.metadata.mango.miri]
crates = ["mango-loom-demo"]

# madsim deterministic-simulation curated-subset opt-in (see
# docs/madsim.md). A crate lands in this list the same PR that
# starts using `tokio.workspace = true` and ships at least one
# `#[madsim::test]` test. `.github/workflows/madsim.yml` reads
# this list via `scripts/madsim-crates.sh`. Typos land silently
# (Cargo does not validate metadata contents) — the regression
# test is `scripts/madsim-scripts-test.sh`.
[workspace.metadata.mango.madsim]
crates = ["mango-madsim-demo"]

# Exact-version pin for loom. Env-var semantics (LOOM_MAX_PREEMPTIONS,
# LOOM_MAX_BRANCHES, etc.) and model behavior can drift between minor
# versions; pinning exact prevents `cargo update` from silently
# changing CI semantics. See docs/loom.md for the version-bump
# procedure.
[workspace.dependencies]
loom = "=0.7.2"

# madsim deterministic-simulator runtime. Package-rename shape
# per madsim's integration guide: source code writes
# `use tokio::time::sleep;` unchanged; the rename does the swap
# at link time. Activated by RUSTFLAGS="--cfg madsim".
#
# Under the default build, `madsim-tokio` re-exports real tokio.
# Under `--cfg madsim`, it substitutes the deterministic simulator.
#
# `package = "madsim-tokio"` inside [workspace.dependencies] is
# accepted by Cargo; member crates inherit the rename via
# `tokio.workspace = true` (RisingWave uses this same pattern).
# See docs/madsim.md §"The rename".
#
# Exact pins — same rationale as loom above: env-var semantics
# (MADSIM_TEST_SEED / MADSIM_TEST_NUM) and simulator behavior
# can drift between patch versions. Move both lines together.
# madsim-tonic is deliberately NOT declared yet; Phase 6 adds
# it in the same PR as the first tonic-using crate.
tokio = { version = "=0.2.30", package = "madsim-tokio" }
madsim = { version = "=0.2.30", features = ["macros"] }
# Constant-time comparison primitives for secret byte compares in
# `auth*` / `crypto*` / `token*` / `hash_chain*` modules. Enforced
# by `scripts/ct-comparison-check.sh` per `docs/ct-comparison-policy.md`.
# `default-features = false` drops the `std` feature (subtle is
# no_std-capable; nothing in the trait surface needs std).
# `const-generics` enables `ConstantTimeEq` on `[T; N]` arrays —
# what fixed-size MAC tags / hashes want.
# Forward-declared here so the first crate that needs it just writes
# `subtle.workspace = true`; no crate uses it yet.
subtle = { version = "2.6", default-features = false, features = [
    "const-generics",
] }

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0"
repository = "https://github.com/humancto/mango"
authors = ["mango contributors"]

[workspace.lints.rust]
unsafe_code = "forbid"
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# Hardening — foot-guns denied workspace-wide. Test modules override
# the lints that tests legitimately need via an inner `#![allow(...)]`;
# see `crates/mango/src/lib.rs`.
# arithmetic_side_effects: see docs/arithmetic-policy.md for the
# accompanying policy (checked_* for protocol counters, saturating_*
# for budgets, wrapping_* for modular math).
unwrap_used = { level = "deny", priority = 1 }
expect_used = { level = "deny", priority = 1 }
panic = { level = "deny", priority = 1 }
unimplemented = { level = "deny", priority = 1 }
todo = { level = "deny", priority = 1 }
indexing_slicing = { level = "deny", priority = 1 }
cast_possible_truncation = { level = "deny", priority = 1 }
cast_sign_loss = { level = "deny", priority = 1 }
arithmetic_side_effects = { level = "deny", priority = 1 }
dbg_macro = { level = "deny", priority = 1 }
print_stdout = { level = "deny", priority = 1 }
print_stderr = { level = "deny", priority = 1 }
await_holding_lock = { level = "deny", priority = 1 }
await_holding_refcell_ref = { level = "deny", priority = 1 }
disallowed_types = { level = "deny", priority = 1 }
# Advisory layer for the constant-time comparison policy
# (docs/ct-comparison-policy.md). Pairs with `disallowed-methods`
# in clippy.toml — without this line the config in clippy.toml is
# inert. Kept at `warn` (not `deny`) because:
#   (a) the scoped grep gate `scripts/ct-comparison-check.sh` is
#       the CI-blocking enforcement layer, and
#   (b) clippy's trait-method path resolution is flaky enough that
#       silent no-op is a real risk; `warn` surfaces hits without
#       blocking PRs if resolution regresses.
disallowed_methods = { level = "warn", priority = 1 }
# Pairs with `msrv = "1.80"` in clippy.toml: flags any stdlib API
# call newer than MSRV at PR time, complementing the `cargo check
# @ 1.80` job that catches it at compile time.
incompatible_msrv = { level = "deny", priority = 1 }
# `#[non_exhaustive]` policy on public enums. Every `pub enum` in a
# publishable (non-`publish = false`) crate must carry
# `#[non_exhaustive]` or a documented per-enum escape. Escape hatch:
# `// reason: ...` line-comment immediately preceding
# `#[allow(clippy::exhaustive_enums)]` on the specific enum. Non-
# publishable crates carry a crate-level `#![allow(...)]` at lib.rs
# top — same pattern as `unsafe_code = "forbid"` + per-crate
# `#![allow(unsafe_code)]`. See `docs/api-stability.md` for the
# policy; `scripts/non-exhaustive-check.sh` is the structural backstop.
exhaustive_enums = { level = "deny", priority = 1 }

# Release profile. overflow-checks = true is the runtime backstop for
# the compile-time clippy::arithmetic_side_effects lint
# (see docs/arithmetic-policy.md). Defense in depth: the lint catches
# arithmetic at PR time; this flag catches anything that slipped past
# (macro-generated math, `#[allow]`-marked sites, etc.) and converts
# silent wrap into a panic. Combined with panic = "abort" and the
# crash-only design (docs/architecture/crash-only.md, future item),
# the failure mode is: overflow -> panic -> abort -> supervisor
# restart -> WAL recovery, not silent data corruption.
#
# NOT affected by overflow-checks (wrap at runtime regardless):
# - atomic RMW ops (AtomicU64::fetch_add etc.) — lower to LLVM
#   atomicrmw which wraps by definition; use checked_add inside a
#   fetch_update for logical checks.
# - `as` casts — never checked. Use try_from / checked_* variants.
# - wrapping_* / saturating_* / checked_* / overflowing_* intrinsics —
#   their contract is explicit, bypassed intentionally.
#
# Cost: ~1-3% on arithmetic-heavy hot paths (folklore number; measure
# on real Raft/serde workloads when Phase 14 perf work lands). If a
# specific dep relies on release-mode wrap and CI goes red on a dep
# bump, surgical escape is:
#   [profile.release.package.<name>]
#   overflow-checks = false
# Audit candidates on first bump: ahash, fxhash, siphasher,
# twox-hash, crc32fast, zstd-safe.
#
# [profile.bench] inherits from release, so benches get overflow
# checks too. Override there when measuring raw throughput.
[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
overflow-checks = true

[profile.dev]
opt-level = 0
debug = true
