[workspace]
resolver = "2"
members = [
    "crates/mango",
    "crates/mango-proto",
    "crates/mango-storage",
    "crates/mango-mvcc",
    "crates/mango-loom-demo",
    "crates/mango-madsim-demo",
    "crates/xtask-vet-ttl",
    # ROADMAP:829 — Phase 1 parity bench harness. NOT in
    # default-members (see below): `cargo build` / `cargo test`
    # from the workspace root skips it. Build explicitly with
    # `cargo build -p mango-bench-storage --release`.
    "benches/storage",
]

# Crates that `cargo build`, `cargo test`, `cargo clippy` operate on
# when no `-p` flag is given. The bench harness is deliberately
# excluded so the default workspace operations remain fast and the
# harness's heavy dep graph (hdrhistogram, base64, etc.) does not
# pollute every CI lane. Explicit `-p mango-bench-storage` opts in.
default-members = [
    "crates/mango",
    "crates/mango-proto",
    "crates/mango-storage",
    "crates/mango-mvcc",
    "crates/mango-loom-demo",
    "crates/mango-madsim-demo",
    "crates/xtask-vet-ttl",
]
# tests/fixtures/geiger-toy-workspace is a self-contained workspace
# used by scripts/geiger-scripts-test.sh as a real-cargo-geiger
# oracle. Excluding it keeps Cargo from discovering its
# deliberately-unsafe source under mango's `unsafe_code = "forbid"`
# lint and from walking its `[workspace]` table as if it were a
# nested member. See docs/unsafe-policy.md.
#
# tests/fixtures/non-exhaustive is a self-contained workspace used
# by scripts/non-exhaustive-scripts-test.sh as a real-clippy
# oracle for the `clippy::exhaustive_enums` lint. Its `bad/`
# member contains a deliberately-non-exhaustive `pub enum` that
# would fire the workspace lint; excluding the directory keeps
# the mango workspace clippy run clean. See
# docs/api-stability.md.
exclude = [
    "tests/fixtures/geiger-toy-workspace",
    "tests/fixtures/non-exhaustive",
]

# Miri curated-subset opt-in (see docs/miri.md). Any crate that ships
# `unsafe` (and therefore carries a `#![allow(unsafe_code)]` escape
# from the workspace `unsafe_code = "forbid"` lint) MUST name itself
# here in the same PR. `.github/workflows/miri.yml` reads this list
# via `scripts/miri-crates.sh`. The workspace metadata table is
# Cargo's documented escape hatch for project-local extensions; Cargo
# does not validate the contents (typos land silently), so
# `scripts/miri-scripts-test.sh` is the regression test for the
# table shape.
#
# A follow-up dylint (tracked in GitHub issues) will reject any crate
# with `#![allow(unsafe_code)]` that is missing from this list.
[workspace.metadata.mango.miri]
crates = ["mango-loom-demo"]

# madsim deterministic-simulation curated-subset opt-in (see
# docs/madsim.md). A crate lands in this list the same PR that
# starts using `tokio.workspace = true` and ships at least one
# `#[madsim::test]` test. `.github/workflows/madsim.yml` reads
# this list via `scripts/madsim-crates.sh`. Typos land silently
# (Cargo does not validate metadata contents) — the regression
# test is `scripts/madsim-scripts-test.sh`.
[workspace.metadata.mango.madsim]
crates = ["mango-madsim-demo", "mango-storage"]

# Exact-version pin for loom. Env-var semantics (LOOM_MAX_PREEMPTIONS,
# LOOM_MAX_BRANCHES, etc.) and model behavior can drift between minor
# versions; pinning exact prevents `cargo update` from silently
# changing CI semantics. See docs/loom.md for the version-bump
# procedure.
[workspace.dependencies]
loom = "=0.7.2"

# madsim deterministic-simulator runtime. Package-rename shape
# per madsim's integration guide: source code writes
# `use tokio::time::sleep;` unchanged; the rename does the swap
# at link time. Activated by RUSTFLAGS="--cfg madsim".
#
# Under the default build, `madsim-tokio` re-exports real tokio.
# Under `--cfg madsim`, it substitutes the deterministic simulator.
#
# `package = "madsim-tokio"` inside [workspace.dependencies] is
# accepted by Cargo; member crates inherit the rename via
# `tokio.workspace = true` (RisingWave uses this same pattern).
# See docs/madsim.md §"The rename".
#
# Exact pins — same rationale as loom above: env-var semantics
# (MADSIM_TEST_SEED / MADSIM_TEST_NUM) and simulator behavior
# can drift between patch versions. Move both lines together.
# madsim-tonic is deliberately NOT declared yet; Phase 6 adds
# it in the same PR as the first tonic-using crate.
tokio = { version = "=0.2.30", package = "madsim-tokio" }
madsim = { version = "=0.2.30", features = ["macros"] }
# Constant-time comparison primitives for secret byte compares in
# `auth*` / `crypto*` / `token*` / `hash_chain*` modules. Enforced
# by `scripts/ct-comparison-check.sh` per `docs/ct-comparison-policy.md`.
# `default-features = false` drops the `std` feature (subtle is
# no_std-capable; nothing in the trait surface needs std).
# `const-generics` enables `ConstantTimeEq` on `[T; N]` arrays —
# what fixed-size MAC tags / hashes want.
# Forward-declared here so the first crate that needs it just writes
# `subtle.workspace = true`; no crate uses it yet.
subtle = { version = "2.6", default-features = false, features = [
    "const-generics",
] }

# Phase 1 storage-backend deps (ROADMAP:815). See
# .planning/adr/0002-storage-engine.md and
# .planning/fork-raft-engine-lz4-verification.md.
#
# redb: pure-Rust embedded KV store. Pin shape `"4.1.0"` = `^4.1.0`
# (>= 4.1.0, < 5.0.0) — ADR 0002 verified 4.1.0 specifically; the pin
# is visible in the manifest for that reason. Minor/patch bumps inside
# the 4.x range arrive via Dependabot.
redb = "4.1.0"

# raft-engine via the humancto/raft-engine fork.
# Fork exists to feature-gate lz4-sys (C FFI) out of the default build
# graph — see ADR 0002 §W5. `default-features = false` drops all three
# upstream defaults (`internals`, `scripting`, `lz4-compression`); we
# re-enable only `internals` because:
#   - `lz4-compression` pulls lz4-sys (C FFI) — the entire reason the
#     fork exists.
#   - `scripting` pulls rhai → smartstring (MPL-2.0), an allow-list
#     widening we do not want to take for a feature mango doesn't use.
#     Scripting is raft-engine's TiKV-admin-CLI path; mango has no
#     consumer of that surface.
#   - `internals` exposes the Raft log reader/writer types mango-raft
#     (Phase 1 impl PRs) actually needs.
# Consumers MUST write `raft-engine.workspace = true` with NO local
# `features = [...]` — local features ADD to the workspace set, which
# would re-enable features we deliberately turned off.
#
# Mango configs MUST set batch-compression-threshold = 0 (enforced by
# the fork's Config::sanitize when lz4-compression is off).
#
# Retirement: when tikv/raft-engine#397 merges, swap git URL to
# tikv/raft-engine at the merged SHA per the procedure in
# .planning/fork-raft-engine-lz4-verification.md §"Retirement plan".
# Dependabot does NOT auto-bump git rev pins; retirement is manual.
raft-engine = { version = "0.4.2", git = "https://github.com/humancto/raft-engine", rev = "e1d738d9ad1c1fc4f5b21c8c73bf605b5696f535", default-features = false, features = [
    "internals",
] }

# raft (raft-rs) at master SHA — provides `raft::eraftpb::{Entry,
# HardState, SnapshotMetadata}` used at the `RaftLogStore` conversion
# boundary in mango-storage (ROADMAP:818). We do NOT depend on raft-rs
# for its state machine in Phase 1 — only for the protobuf-generated
# types that raft-engine's `MessageExtTyped` expects. Phase 3
# `mango-raft` will exercise the state machine properly.
#
# Pin shape:
# - `version = "0.7"` is the matching crates.io version (0.7.0); the
#   SHA-pin below takes precedence, but the version string is required
#   by cargo-deny's `wildcards = "deny"` rule for git deps.
# - `rev = "<SHA>"` — raft-rs master does not publish every commit to
#   crates.io, and mango workspace policy is SHA-pin for every git dep.
#   Dependabot does NOT auto-bump git rev pins; rebase is manual.
# - `default-features = false` drops `default-logger` (slog-stdlog +
#   slog-envlogger + slog-term — we don't want a global logger config
#   leaking in from a transitive dep).
# - `features = ["protobuf-codec"]` keeps the rust-protobuf v2 types
#   that raft-engine's `internals` feature consumes. `prost-codec`
#   would produce Entry types that don't satisfy raft-engine's
#   `Message` bound (rust-protobuf vs prost are separate Message
#   traits).
#
# See .planning/raft-engine-logstore.plan.md §"Dependency surface"
# for the expert-reviewed rationale and
# .planning/fork-raft-engine-lz4-verification.md for the
# sibling-pin (raft-engine fork).
raft = { version = "0.7", git = "https://github.com/tikv/raft-rs", rev = "53cf7a5b0bf08d278ad768a60b77e68fa10f93aa", default-features = false, features = [
    "protobuf-codec",
] }

# Phase 1 trait-surface deps (ROADMAP:816).
#
# bytes: ref-counted `Bytes` for Raft entry payloads and snapshot
# blobs. Cheap clone (AtomicUsize fetch_add), zero-copy slicing.
# Already in the transitive graph via madsim and several others;
# a workspace-level declaration just gives the trait crate a stable
# access point without any new dep-graph churn. cargo-vet exemption
# already present in supply-chain/config.toml.
bytes = "1.11"
# thiserror: idiomatic error-enum derivation for BackendError. The
# alternative (hand-rolled Display + Error impls) is ~30 LoC of
# boilerplate per enum with zero additional engineering value.
# Already in the transitive graph; exemption already present.
thiserror = "2"

# Phase 1 Backend-impl deps (ROADMAP:817).
#
# parking_lot: sync-path Mutex/RwLock — the blessed alternative to
# std::sync per clippy.toml's `disallowed-types` ban (std's lock
# poisoning is a footgun we deliberately don't adopt). Used by
# RedbBackend to serialize `Database::compact(&mut self)` against
# concurrent `&self` operations — redb 4.x's compact takes `&mut`,
# so the backend wraps the Database in `parking_lot::RwLock` and
# upgrades to a write-guard only in `defragment`. cargo-vet
# exemption already present (parking_lot@0.12.5, parking_lot_core@0.9.12).
parking_lot = "0.12"

# Phase 2 sharded KeyIndex hasher (ROADMAP:840).
#
# ahash: HashDoS-resistant `BuildHasher` with per-process random seed
# pulled from the OS CSPRNG (via ahash's `runtime-rng` default
# feature). Used by `mango_mvcc::ShardedKeyIndex` for both routing
# (key → shard) and per-shard `HashMap` hashing — the same
# `RandomState` instance is cloned into every shard so routing and
# in-shard lookup agree. We deliberately do not pull `getrandom` as
# a direct dep; ahash already does the OS-CSPRNG read.
ahash = "0.8"

# Phase 1 user-data block compression (ROADMAP:830).
#
# lz4_flex: pure-Rust LZ4. ADR 0002 §3 names lz4_flex as the
# workspace's LZ4 library on the Raft-log path; this entry extends
# that choice to the user-data backend (mango-storage encodes/decodes
# at the value boundary in the redb backend). ADR 0002 §W5 bans
# lz4-sys (C FFI), so this is the only library satisfying both
# pure-Rust and `unsafe_code = "forbid"` for mango's own crates.
#
# Pin shape: `=0.13.0` exact (matches redb posture, line 104). A
# bump to 0.14+ requires refreshing the cargo-vet exemption AND
# re-audit; Dependabot does NOT auto-bump exact pins.
#
# Features:
# - `default-features = false` drops `frame` (dragging in
#   `twox-hash`) and `nightly` (no nightly toolchain in CI).
# - `safe-encode` / `safe-decode` keep the codec on the
#   `unsafe`-free path. Workspace policy is `unsafe_code = "forbid"`
#   for mango's own crates; for deps the same posture is enforced
#   via `cargo-geiger` (ROADMAP:823 baseline). Without these
#   features, lz4_flex falls back to pointer-arith hot loops with
#   `unsafe`.
# - `checked-decode` is the decoder-side bounds-check layer that
#   lz4_flex's manifest documents as "remove only on trusted
#   input". Disk bytes are NOT trusted (corruption, partial-write,
#   future bug) — the decoder must remain robust to adversarial
#   payloads.
# - `std` is required for the `Vec<u8>` allocator path.
#
# Verify post-add: `cargo tree -e no-dev -p mango-storage |
# grep -E 'lz4|twox-hash'` must show only `lz4_flex 0.13.0` (no
# `twox-hash`, no other lz4 crate). cargo-vet exemption recorded
# in supply-chain/config.toml with a review-by date.
lz4_flex = { version = "=0.13.0", default-features = false, features = [
    "safe-encode",
    "safe-decode",
    "checked-decode",
    "std",
] }

# Phase 2 lock-free snapshot publication primitive (ROADMAP:846).
#
# arc-swap: Atomic swap of `Arc<T>` — the publication primitive
# named in ROADMAP.md:846 for `MvccStore`'s `(rev, compacted)`
# snapshot, and the read-side foundation for L854's gRPC server
# (Concurrency axis #2). `ArcSwap<T>` is `ArcSwapAny<Arc<T>>` — the
# right spelling is `ArcSwap<Snapshot>` (NOT `ArcSwap<Arc<Snapshot>>`,
# which would be a double-Arc). Internally uses unsafe; exposes a
# safe API and is `forbid(unsafe_code)`-friendly from our side.
# Stable 1.x supports rustc 1.61+, comfortably under our
# `rust-version.workspace = "1.89"`. cargo-vet exemption recorded
# in supply-chain/config.toml.
arc-swap = "1.9"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.89"
license = "Apache-2.0"
repository = "https://github.com/humancto/mango"
authors = ["mango contributors"]

[workspace.lints.rust]
unsafe_code = "forbid"
unreachable_pub = "warn"
# `--cfg madsim` is the ecosystem-standard activation mechanism
# (see docs/madsim.md). Registering it at the workspace level lets
# any crate carry `#[cfg(madsim)]` / `#[cfg(not(madsim))]` gates
# without tripping `unexpected_cfgs`. No-op for crates that do not
# reference the cfg. mango-madsim-demo opts out of workspace lints
# entirely and declares this locally; every other crate inherits.
# `--cfg loom` is loom's standard activation mechanism for permutation
# tests. The L840 `ShardedKeyIndex` carries a `cfg(loom)` shim that
# swaps `parking_lot::RwLock` for `loom::sync::RwLock` so L841's loom
# tests can drop in without a retrofit. Registering here keeps the
# `unexpected_cfgs` lint quiet across the workspace.
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(madsim)", "cfg(loom)"] }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# Hardening — foot-guns denied workspace-wide. Test modules override
# the lints that tests legitimately need via an inner `#![allow(...)]`;
# see `crates/mango/src/lib.rs`.
# arithmetic_side_effects: see docs/arithmetic-policy.md for the
# accompanying policy (checked_* for protocol counters, saturating_*
# for budgets, wrapping_* for modular math).
unwrap_used = { level = "deny", priority = 1 }
expect_used = { level = "deny", priority = 1 }
panic = { level = "deny", priority = 1 }
unimplemented = { level = "deny", priority = 1 }
todo = { level = "deny", priority = 1 }
indexing_slicing = { level = "deny", priority = 1 }
cast_possible_truncation = { level = "deny", priority = 1 }
cast_sign_loss = { level = "deny", priority = 1 }
arithmetic_side_effects = { level = "deny", priority = 1 }
dbg_macro = { level = "deny", priority = 1 }
print_stdout = { level = "deny", priority = 1 }
print_stderr = { level = "deny", priority = 1 }
await_holding_lock = { level = "deny", priority = 1 }
await_holding_refcell_ref = { level = "deny", priority = 1 }
disallowed_types = { level = "deny", priority = 1 }
# Advisory layer for the constant-time comparison policy
# (docs/ct-comparison-policy.md). Pairs with `disallowed-methods`
# in clippy.toml — without this line the config in clippy.toml is
# inert. Kept at `warn` (not `deny`) because:
#   (a) the scoped grep gate `scripts/ct-comparison-check.sh` is
#       the CI-blocking enforcement layer, and
#   (b) clippy's trait-method path resolution is flaky enough that
#       silent no-op is a real risk; `warn` surfaces hits without
#       blocking PRs if resolution regresses.
disallowed_methods = { level = "warn", priority = 1 }
# Pairs with `msrv = "1.89"` in clippy.toml: flags any stdlib API
# call newer than MSRV at PR time, complementing the `cargo check
# @ 1.89` job that catches it at compile time.
incompatible_msrv = { level = "deny", priority = 1 }
# `#[non_exhaustive]` policy on public enums. Every `pub enum` in a
# publishable (non-`publish = false`) crate must carry
# `#[non_exhaustive]` or a documented per-enum escape. Escape hatch:
# `// reason: ...` line-comment immediately preceding
# `#[allow(clippy::exhaustive_enums)]` on the specific enum. Non-
# publishable crates carry a crate-level `#![allow(...)]` at lib.rs
# top — same pattern as `unsafe_code = "forbid"` + per-crate
# `#![allow(unsafe_code)]`. See `docs/api-stability.md` for the
# policy; `scripts/non-exhaustive-check.sh` is the structural backstop.
exhaustive_enums = { level = "deny", priority = 1 }

# Release profile. overflow-checks = true is the runtime backstop for
# the compile-time clippy::arithmetic_side_effects lint
# (see docs/arithmetic-policy.md). Defense in depth: the lint catches
# arithmetic at PR time; this flag catches anything that slipped past
# (macro-generated math, `#[allow]`-marked sites, etc.) and converts
# silent wrap into a panic. Combined with panic = "abort" and the
# crash-only design (docs/architecture/crash-only.md, future item),
# the failure mode is: overflow -> panic -> abort -> supervisor
# restart -> WAL recovery, not silent data corruption.
#
# NOT affected by overflow-checks (wrap at runtime regardless):
# - atomic RMW ops (AtomicU64::fetch_add etc.) — lower to LLVM
#   atomicrmw which wraps by definition; use checked_add inside a
#   fetch_update for logical checks.
# - `as` casts — never checked. Use try_from / checked_* variants.
# - wrapping_* / saturating_* / checked_* / overflowing_* intrinsics —
#   their contract is explicit, bypassed intentionally.
#
# Cost: ~1-3% on arithmetic-heavy hot paths (folklore number; measure
# on real Raft/serde workloads when Phase 14 perf work lands). If a
# specific dep relies on release-mode wrap and CI goes red on a dep
# bump, surgical escape is:
#   [profile.release.package.<name>]
#   overflow-checks = false
# Audit candidates on first bump: ahash, fxhash, siphasher,
# twox-hash, crc32fast, zstd-safe.
#
# [profile.bench] inherits from release, so benches get overflow
# checks too. Override there when measuring raw throughput.
[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
overflow-checks = true

[profile.dev]
opt-level = 0
debug = true
