[package]
name = "mango-bench-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

# Two binaries:
# - `run`  drives the workload against one engine and writes a JSON result
# - `gate` reads two result JSONs and applies the win/loss verdict
[[bin]]
name = "run"
path = "src/bin/run.rs"

[[bin]]
name = "gate"
path = "src/bin/gate.rs"

[dependencies]
# Workspace-shared deps (already declared in [workspace.dependencies])
bytes.workspace = true
parking_lot.workspace = true
thiserror.workspace = true

# First-party
mango-storage = { path = "../../crates/mango-storage" }

# Per-crate (matches the existing per-crate declaration pattern of
# crates/mango-storage and crates/xtask-vet-ttl). All listed crates
# are already in the workspace dep graph as transitives or via
# other members' Cargo.toml declarations; cargo-vet exemptions are
# already present in supply-chain/config.toml for these.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.10"
rand = "0.8"
rand_chacha = "0.3"
tempfile = "3"

# hdrhistogram: latency-histogram capture + V2 wire encoding (B1).
# Used by tikv, tracing, vector. Permissive license. Internal
# `unsafe` is in the recorder hot path (~50 lines, well-reviewed).
# The exemption is added in supply-chain/config.toml in the same
# commit. `default-features = false` drops `serialization`'s
# downstream `nom` dependency until we need it (the V2 encoder is
# in the core feature set).
hdrhistogram = "7.5"

# nix is pinned to the same `0.26` version mango-storage declares so
# the lockfile stays single-version (cargo-vet exemption surface
# stays narrow — N7). Used for posix_fadvise (cold-cache primitive
# — N6) and statvfs (disk pre-check).
nix = { version = "0.26", default-features = false, features = ["fs"] }

# base64 for the HdrHistogram V2 wire encoding (B1).
base64 = "0.22"

# tokio (workspace-renamed to madsim-tokio) is needed solely to drive
# `RedbBackend::commit_batch` / `commit_group` from the synchronous
# bench harness. Same `features = ["rt"]` set the storage crate uses
# for its commit path; `spawn_blocking` lives behind `rt` and the
# runtime is built `current_thread` (no timers required). The
# differential test in `crates/mango-storage/tests/differential_vs_bbolt.rs`
# uses the same pattern. Workspace rename takes care of the
# `--cfg madsim` substitution at link time.
tokio = { workspace = true, features = ["rt"] }

[dev-dependencies]
# Used in tests; harness binaries do not depend on these directly.
proptest = "1.5"

[lints]
workspace = true
